--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,11 @@ body{
   .indent{
     margin-left: 1em;
   }
+
+  .daily-value p:not(.no-divider){
+    border-bottom: 1px solid #888989;
+  }
+
+  .double-indent{
+    margin-left: 2em;
+  }
